--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-tes="shoppingList">A good Laptop</li>
+		<li data-ns-tes="shoppingList">Webcam</li>
+		<li data-ns-tes="shoppingList">Bike</li>
+	</ol>
+	<ul>
+		<li data-ns-tes="holidayList">Manali</li>
+		<li data-ns-tes="holidayList">Shimla</li>
+		<li data-ns-tes="holidayList">Kashmir</li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
