--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-tes="shoppingList">A good Laptop</li>
-		<li data-ns-tes="shoppingList">Webcam</li>
-		<li data-ns-tes="shoppingList">Bike</li>
+		<li data-ns-test="shoppingList">A good Laptop</li>
+		<li data-ns-test="shoppingList">Webcam</li>
+		<li data-ns-test="shoppingList">Bike</li>
 	</ol>
 	<ul>
-		<li data-ns-tes="holidayList">Manali</li>
-		<li data-ns-tes="holidayList">Shimla</li>
-		<li data-ns-tes="holidayList">Kashmir</li>
+		<li data-ns-test="holidayList">Manali</li>
+		<li data-ns-test="holidayList">Shimla</li>
+		<li data-ns-test="holidayList">Kashmir</li>
 	</ul>
 	
     <script type="text/javascript" src="./script.js">
